--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,8 @@ services:
   db:
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
     image: 'postgres:alpine'
     restart: always
     volumes:
@@ -17,12 +16,24 @@ services:
     depends_on:
       - db
     environment:
-      MIX_ENV: dev
+      MIX_ENV: $MIX_ENV
     env_file:
       - .env
-    ports:
-      - '4000:4000'
     volumes:
       - .:/app
+  caddy:
+    depends_on:
+      - web
+    image: library/caddy:latest
+    restart: always
+    volumes:
+      - caddy_data:/data
+      - caddy_config:/config
+      - "./Caddyfile:/etc/caddy/Caddyfile"
+    ports:
+      - "80:80"
+      - "443:443"
 volumes:
   pgdata:
+  caddy_data:
+  caddy_config:
