--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_USER: $POSTGRES_USERNAME
     image: 'postgres:alpine'
     restart: always
     volumes:
@@ -15,6 +15,7 @@ services:
     build: .
     depends_on:
       - db
+    restart: always
     environment:
       MIX_ENV: $MIX_ENV
     env_file:
