Added PHX_HOST to Caddyfile

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,7 @@
-communote.be {
+{$PHX_HOST} {
 	redir https://www.{host}{uri}
 }
 
-localhost, www.communote.be {
+localhost, www.{$PHX_HOST} {
 	reverse_proxy web:80
 }
